--- a/bprog.cabal
+++ b/bprog.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.2.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 76fcd19262920701d451c69343fd3b6649bb4d1a591ede3d4da0508e948a1215
+-- hash: 35963c962722371e0b6960dd60b9191c222066888f7a3b12623a51fd3f0e74aa
 
 name:           bprog
 version:        0.1.0.0
@@ -15,10 +15,10 @@ author:         Dennis Kristiansen <denniskr@stud.ntnu.no>
 maintainer:     Dennis Kristiansen <denniskr@stud.ntnu.no>
 copyright:      2021 Dennis Kristiansen
 license:        MIT
-license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
-    README.md
+    readme.md
+    license.md
 
 source-repository head
   type: git
@@ -27,12 +27,16 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Parser
+      Types
   other-modules:
       Paths_bprog
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , megaparsec >=9.0 && <10.0
+    , text >=1.2.4 && <1.3
   default-language: Haskell2010
 
 executable bprog-exe
@@ -45,6 +49,8 @@ executable bprog-exe
   build-depends:
       base >=4.7 && <5
     , bprog
+    , megaparsec >=9.0 && <10.0
+    , text >=1.2.4 && <1.3
   default-language: Haskell2010
 
 test-suite bprog-test
@@ -58,4 +64,6 @@ test-suite bprog-test
   build-depends:
       base >=4.7 && <5
     , bprog
+    , megaparsec >=9.0 && <10.0
+    , text >=1.2.4 && <1.3
   default-language: Haskell2010
