--- a/package.yaml
+++ b/package.yaml
@@ -7,12 +7,15 @@ maintainer: "Dennis Kristiansen <denniskr@stud.ntnu.no>"
 copyright: "2021 Dennis Kristiansen"
 
 extra-source-files:
-  - README.md
+  - readme.md
+  - license.md
 
 description: Please see the README on GitHub at <https://github.com/turbocartpig/bprog#readme>
 
 dependencies:
   - base >= 4.7 && < 5
+  - megaparsec >= 9.0 && < 10.0
+  - text >= 1.2.4 && < 1.3
 
 library:
   source-dirs: src
