--- a/bprog.cabal
+++ b/bprog.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 35963c962722371e0b6960dd60b9191c222066888f7a3b12623a51fd3f0e74aa
+-- hash: 5889b06442b9a47b48b78a6a93d1cd073ea18ffa832b8738218f8248befcb127
 
 name:           bprog
 version:        0.1.0.0
@@ -26,6 +26,7 @@ source-repository head
 
 library
   exposed-modules:
+      Eval
       Lib
       Parser
       Types
@@ -35,8 +36,6 @@ library
       src
   build-depends:
       base >=4.7 && <5
-    , megaparsec >=9.0 && <10.0
-    , text >=1.2.4 && <1.3
   default-language: Haskell2010
 
 executable bprog-exe
@@ -49,8 +48,6 @@ executable bprog-exe
   build-depends:
       base >=4.7 && <5
     , bprog
-    , megaparsec >=9.0 && <10.0
-    , text >=1.2.4 && <1.3
   default-language: Haskell2010
 
 test-suite bprog-test
@@ -64,6 +61,4 @@ test-suite bprog-test
   build-depends:
       base >=4.7 && <5
     , bprog
-    , megaparsec >=9.0 && <10.0
-    , text >=1.2.4 && <1.3
   default-language: Haskell2010
