--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,7 @@ description: Please see the README on GitHub at <https://github.com/turbocartpig
 dependencies:
   - base >= 4.7 && < 5
   - containers >= 0.6 && < 0.7
+  - extra >= 1.7 && < 1.8
 
 library:
   source-dirs: src
